...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="#cdfeed">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_leave_flatshare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fridge_face"
            android:orientation="vertical">

...
