...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="#cdfeed">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_create_access_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/fridge_face"
...
